@@ -7,6 +7,7 @@ CHANGELOG Roundcube Webmail
 - Fix addressbook searching by gender (#5757)
 - Fix SQL syntax error on MariaDB 10.2 (#5774)
 - Fix bug where it wasn't possible to set timezone to auto-detected value (#5782)
+- Fix uninitialized string offset in rcube_utils::bin2ascii() and make sure rcube_utils::random_bytes() result has always requested length (#5788)
 
 RELEASE 1.2.5
 -------------
